--- a/meta.yaml
+++ b/meta.yaml
@@ -1,5 +1,5 @@
 {% set build = 0 %}
-{% set version = "2.2" %}
+{% set version = "2.6" %}
 
 package:
     name: tmux
@@ -13,13 +13,15 @@ about:
 source:
     fn: tig-{{version}}.tar.gz
     url: https://github.com/tmux/tmux/releases/download/{{version}}/tmux-{{version}}.tar.gz
-    md5: bd95ee7205e489c62c616bb7af040099
+    md5: d541ff392249f94c4f3635793556f827
 
 requirements:
     build:
         - libevent >=2.0
+        - ncurses
     run:
         - libevent >=2.0
+        - ncurses
 
 build:
     number: {{build}}
